--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head> 
-    <title>Wes Taylor</title> 
+    <title>Narayan Rai</title> 
     <link rel="stylesheet" href="style.css">
     <title>Test</title>
   </head>
   <body>
-    <h1>Wes Taylor!</h1>
+    <h1>Narayan!</h1>
     <h5>Lab 3-4 Works! Yaa!</h5>
   </body>
 </html>
